cluster/webhookconfigurations/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-apiextensions-crossplane-io-v1-compositeresourcedefinition
  failurePolicy: Fail
  name: compositeresourcedefinitions.apiextensions.crossplane.io
  rules:
  - apiGroups:
    - apiextensions.crossplane.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - compositeresourcedefinitions
  sideEffects: None
