cluster/webhookconfigurations/usage.yaml
---
# Note(turkenh): It is not possible to get this generated by kubebuilder at the moment due to
# lack of support for objectSelector in controller-tools.
# See: https://github.com/kubernetes-sigs/controller-tools/blob/master/pkg/webhook/parser.go#L202-L212
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: crossplane-no-usages
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /validate-no-usages
    failurePolicy: Fail
    name: nousages.protection.crossplane.io
    objectSelector:
      matchLabels:
        crossplane.io/in-use: "true"
    rules:
      - apiGroups:
          - '*'
        apiVersions:
          - '*'
        operations:
          - DELETE
        resources:
          - '*'
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: crossplane-usage-scope
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /validate-usage-scope
    # This webhook only exists to give faster feedback than the Usage
    # controller, which rejects a namespaced Usage of a cluster-scoped
    # resource at reconcile time. It's therefore safe to ignore failures.
    failurePolicy: Ignore
    name: usagescope.protection.crossplane.io
    rules:
      - apiGroups:
          - protection.crossplane.io
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - usages
        scope: Namespaced
    sideEffects: None
